--- a/.github/workflows/test-linux-examples.yml
+++ b/.github/workflows/test-linux-examples.yml
@@ -39,12 +39,12 @@ jobs:
         export CUDA_ARCH_VERSION=${{ matrix.cuda_arch_version }}
         export CU_VERSION="cu${CUDA_ARCH_VERSION:0:2}${CUDA_ARCH_VERSION:3:1}"
 
-        if [[ "${GITHUB_REF##*/}" == release/* ]]; then
+        if [[ "${{ github.ref == 'release/*' }}" == release/* ]]; then
           export RELEASE=1
-          export TORCH_VERSION=nightly
+          export TORCH_VERSION=stable
         else
           export RELEASE=0
-          export TORCH_VERSION=stable
+          export TORCH_VERSION=nightly
         fi
 
         echo "PYTHON_VERSION: $PYTHON_VERSION"
