--- a/.github/workflows/test-linux-habitat.yml
+++ b/.github/workflows/test-linux-habitat.yml
@@ -31,12 +31,12 @@ jobs:
       gpu-arch-version: ${{ matrix.cuda_arch_version }}
       timeout: 90
       script: |
-        if [[ "${GITHUB_REF##*/}" == release/* ]]; then
+        if [[ "${{ github.ref == 'release/*' }}" == release/* ]]; then
           export RELEASE=1
-          export TORCH_VERSION=nightly
+          export TORCH_VERSION=stable
         else
           export RELEASE=0
-          export TORCH_VERSION=stable
+          export TORCH_VERSION=nightly
         fi
 
         # Set env vars from matrix
