--- a/.github/workflows/test-linux-rlhf.yml
+++ b/.github/workflows/test-linux-rlhf.yml
@@ -30,7 +30,7 @@ jobs:
       docker-image: "nvidia/cudagl:11.4.0-base"
       timeout: 120
       script: |
-        if [[ ${{ github.ref == 'release/*' }} ]]; then
+        if [[ "${{ github.ref }}" =~ release/* ]]; then
           export RELEASE=1
           export TORCH_VERSION=stable
         else
