--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -173,13 +173,15 @@ jobs:
         # Commenting these out for now because the GPU test are not working inside docker
         export CUDA_ARCH_VERSION=${{ matrix.cuda_arch_version }}
         export CU_VERSION="cu${CUDA_ARCH_VERSION:0:2}${CUDA_ARCH_VERSION:3:1}"
+
         if [[ "${{ github.ref }}" =~ release/* ]]; then
           export RELEASE=1
-          export TORCH_VERSION=nightly
+          export TORCH_VERSION=stable
         else
           export RELEASE=0
           export TORCH_VERSION=nightly
         fi
+
         # Remove the following line when the GPU tests are working inside docker, and uncomment the above lines
         #export CU_VERSION="cpu"
 
